--- a/FrontEnd/styles/index.scss
+++ b/FrontEnd/styles/index.scss
@@ -2,7 +2,7 @@
 
 html, body {
   height: 100vh;
-  width: 100 wh;
+  width: 100wh;
   padding: 0;
   margin: 0;
 }
@@ -74,4 +74,5 @@ html, body {
   max-height: 100%;
   overflow-y: auto;
   padding-right: 1em;
+  padding-bottom: 2em;
 }
